--- a/whos-that-pokemon/src/css/style.css
+++ b/whos-that-pokemon/src/css/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "PokemonH";
-    src: url("../../../../../images/fonts/Pokemon_Hollow.ttf") format("truetype");
+    src: url("../../fonts/Pokemon_Hollow.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "PokemonS";
-    src: url("../../../../../images/fonts/Pokemon_Solid.ttf") format("truetype");
+    src: url("../../fonts/Pokemon_Solid.ttf") format("truetype");
 }
 
 body{
@@ -79,7 +79,7 @@ body{
     width: 20px;
     height: 20px;
 
-    background: url("../../../../../images/but/mute.png");
+    background: url("../../images/but/mute.png");
     background-size: 100%;
 
     border: none;
